# notabug-scrapy

./: .gitignore  README.md  pyproject.toml  requirements.txt
notabug/: accounts.json  accounts.jsonl  runner.py  scrapy.cfg
notabug/notabug/: items.py  middlewares.py  pipelines.py  settings.py
notabug/notabug/spiders/: notabug.py
