[project]
name = "notabug-scrapy"
version = "0.1.0"
description = ""
authors = [
    {name = "paranoik1",email = "paranoik@noreplay.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "scrapy-user-agents (>=0.1.1,<0.2.0)",
    "scrapy-proxy-pool (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

